--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
     "next": "^12.3.1",
+    "next-auth": "^4.15.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "8.0.0"
+    "react-markdown": "8.0.0",
+    "root": "github:intrepion/next-auth"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
